fix: disable sticky hover on mobile

--- a/src/app/a11y/DisableOutlinesForClick.module.css
+++ b/src/app/a11y/DisableOutlinesForClick.module.css
@@ -1,5 +1,6 @@
 .focus-disabled :focus {
   outline: 0 !important;
+  box-shadow: none !important;
 }
 
 .focus-disabled :global(.disable-outline-for-click) {
